新增热门省市区

--- a/src/index.html
+++ b/src/index.html
@@ -126,6 +126,8 @@
             style: {
                 // 确定按钮
                 ensureBtn: {
+                    backgroundColor: 'red',
+                    color: '#fff'
                 },
                 // 取消按钮
                 cancelBtn: {
