--- a/src/index.html
+++ b/src/index.html
@@ -147,9 +147,20 @@
                 },
                 // 取消按钮
                 cancelBtn: {
+                    backgroundColor: '#eee',
+                    padding: '5px 10px',
+                    borderRadius: '5px'
                 },
                 // 半透明覆盖层
                 overlay: {
+                },
+                // 热门城市
+                popularCities: {
+                    backgroundColor: '#efefef',
+                },
+                popularCitiesTitle: {
+                },
+                popularCitiesItem: {
                 }
             }
         });
