--- a/src/index.html
+++ b/src/index.html
@@ -124,8 +124,8 @@
             {name: '成都', id: ['32', '3212']}
         ];
 
-        window.newPicker = new ___AddressPicker___({
-            id: '555666',
+        window.newPicker = new ___picker___.AddressPicker({
+            // id: '555666',
             trigger: '#example', // 触发Dom
             // title: '请选择省市区', // 设置标题
             // defaultValue: ['15', '1513', '151315'], // 默认选择的地址
