--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <script src="http://by-health-cdn.oss-cn-beijing.aliyuncs.com/region/regions.js"></script>
     <title>AddressPicker</title>
     <style>
+        html,body {
+            width: 100%;
+        }
         #example {
             line-height: 40px; background-color: rgb(20, 159, 64); width:260px; margin: 30px auto 10px auto; color: #fff; border-radius: 0.2em; text-align: center; 
         }
