--- a/src/index.html
+++ b/src/index.html
@@ -255,7 +255,12 @@
             titleColor: '#000',
             titleBgColor: '#fff',
             bgColor: '#fff',
-            maskOpacity: 0.5
+            maskOpacity: 0.5,
+            style: {
+                wrap: {
+                    color: '#444'
+                }
+            }
         });
 
         document.getElementById('exampleshow').onclick = function(){
