--- a/src/index.html
+++ b/src/index.html
@@ -259,6 +259,9 @@
             style: {
                 wrap: {
                     color: '#444'
+                },
+                mask: {
+                    height: '50em'
                 }
             }
         });
