--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,9 @@
         #uitest {
             display: none;
         }
+        .mobileId_activated {
+            color: red;
+        }
     </style>
 </head>
 <body>
