修改联动被选中状态

--- a/src/index.html
+++ b/src/index.html
@@ -229,6 +229,10 @@
         window.newMobileSelect = new ___picker___.MobileSelect({
             id:'mobileId',
             wheels:msData,
+            // wheels: [
+            //     {data:['周日','周一','周二','周三','周四','周五','周六']},
+            //     {data:['08:00','09:00','10:00','11:00','12:00','13:00','14:00']}
+            // ],
             trigger: '#exampleMobile',
             keyMap: {id: 'val', value: 'date', childs: 'childs'},
             cancelBtnText: 'cancel',
