--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
         .mobileId_activated {
             color: red;
         }
+        .address_activated {
+            color: green;
+        }
     </style>
 </head>
 <body>
@@ -123,7 +126,7 @@
         ];
 
         window.newPicker = new ___picker___.AddressPicker({
-            // id: '555666',
+            id: 'address',
             trigger: '#example', // 触发Dom
             // title: '请选择省市区', // 设置标题
             defaultValue: ['15', '1513', '151315'], // 默认选择的地址
@@ -229,54 +232,54 @@
         window.newMobileSelect = new ___picker___.MobileSelect({
             id:'mobileId',
             // wheels:msData,
-            wheels: [
-                {
-                    data:[
-                        {id: 0, value: '周日'},
-                        {id: 1, value: '周一'},
-                        {id: 2, value: '周二'},
-                        {id: 3, value: '周三'},
-                        {id: 4, value: '周四'},
-                        {id: 5, value: '周五'},
-                        {id: 6, value: '周六'}
-                    ]
-                },
-                {
-                    data:[
-                        {id:8, value:'08:00'},
-                        {id:9, value:'09:00'},
-                        {id:10, value:'10:00'},
-                        {id:11, value:'11:00'},
-                        {id:12, value:'12:00'},
-                        {id:13, value:'13:00'},
-                        {id:14, value:'14:00'}
-                    ]
-                }
-            ],
             // wheels: [
             //     {
             //         data:[
-            //             '周日',
-            //             '周一',
-            //             '周二',
-            //             '周三',
-            //             '周四',
-            //             '周五',
-            //             '周六'
+            //             {val: 0, date: '周日'},
+            //             {val: 1, date: '周一'},
+            //             {val: 2, date: '周二'},
+            //             {val: 3, date: '周三'},
+            //             {val: 4, date: '周四'},
+            //             {val: 5, date: '周五'},
+            //             {val: 6, date: '周六'}
             //         ]
             //     },
             //     {
             //         data:[
-            //             '08:00',
-            //             '09:00',
-            //             '10:00',
-            //             '11:00',
-            //             '12:00',
-            //             '13:00',
-            //             '14:00'
+            //             {val:8, date:'08:00'},
+            //             {val:9, date:'09:00'},
+            //             {val:10, date:'10:00'},
+            //             {val:11, date:'11:00'},
+            //             {val:12, date:'12:00'},
+            //             {val:13, date:'13:00'},
+            //             {val:14, date:'14:00'}
             //         ]
             //     }
             // ],
+            wheels: [
+                {
+                    data:[
+                        '周日',
+                        '周一',
+                        '周二',
+                        '周三',
+                        '周四',
+                        '周五',
+                        '周六'
+                    ]
+                },
+                {
+                    data:[
+                        '08:00',
+                        '09:00',
+                        '10:00',
+                        '11:00',
+                        '12:00',
+                        '13:00',
+                        '14:00'
+                    ]
+                }
+            ],
             trigger: '#exampleMobile',
             keyMap: {id: 'val', value: 'date', childs: 'childs'},
             cancelBtnText: 'cancel',
@@ -326,7 +329,7 @@
         };
 
         document.getElementById('exampleUpdateMobile').onclick = function(){
-            window.newMobileSelect.showPicker(['周二', '10:00']);
+            window.newMobileSelect.showPicker(['周二', '11:00']);
             // window.newMobileSelect.showPicker([7, 9, 2, 20]);
         };
 
