--- a/src/index.html
+++ b/src/index.html
@@ -232,54 +232,54 @@
         window.newMobileSelect = new ___picker___.MobileSelect({
             id:'mobileId',
             // wheels:msData,
-            // wheels: [
-            //     {
-            //         data:[
-            //             {val: 0, date: '周日'},
-            //             {val: 1, date: '周一'},
-            //             {val: 2, date: '周二'},
-            //             {val: 3, date: '周三'},
-            //             {val: 4, date: '周四'},
-            //             {val: 5, date: '周五'},
-            //             {val: 6, date: '周六'}
-            //         ]
-            //     },
-            //     {
-            //         data:[
-            //             {val:8, date:'08:00'},
-            //             {val:9, date:'09:00'},
-            //             {val:10, date:'10:00'},
-            //             {val:11, date:'11:00'},
-            //             {val:12, date:'12:00'},
-            //             {val:13, date:'13:00'},
-            //             {val:14, date:'14:00'}
-            //         ]
-            //     }
-            // ],
             wheels: [
                 {
                     data:[
-                        '周日',
-                        '周一',
-                        '周二',
-                        '周三',
-                        '周四',
-                        '周五',
-                        '周六'
+                        {val: 0, date: '周日'},
+                        {val: 1, date: '周一'},
+                        {val: 2, date: '周二'},
+                        {val: 3, date: '周三'},
+                        {val: 4, date: '周四'},
+                        {val: 5, date: '周五'},
+                        {val: 6, date: '周六'}
                     ]
                 },
                 {
                     data:[
-                        '08:00',
-                        '09:00',
-                        '10:00',
-                        '11:00',
-                        '12:00',
-                        '13:00',
-                        '14:00'
+                        {val:8, date:'08:00'},
+                        {val:9, date:'09:00'},
+                        {val:10, date:'10:00'},
+                        {val:11, date:'11:00'},
+                        {val:12, date:'12:00'},
+                        {val:13, date:'13:00'},
+                        {val:14, date:'14:00'}
                     ]
                 }
             ],
+            // wheels: [
+            //     {
+            //         data:[
+            //             '周日',
+            //             '周一',
+            //             '周二',
+            //             '周三',
+            //             '周四',
+            //             '周五',
+            //             '周六'
+            //         ]
+            //     },
+            //     {
+            //         data:[
+            //             '08:00',
+            //             '09:00',
+            //             '10:00',
+            //             '11:00',
+            //             '12:00',
+            //             '13:00',
+            //             '14:00'
+            //         ]
+            //     }
+            // ],
             trigger: '#exampleMobile',
             keyMap: {id: 'val', value: 'date', childs: 'childs'},
             cancelBtnText: 'cancel',
@@ -329,8 +329,7 @@
         };
 
         document.getElementById('exampleUpdateMobile').onclick = function(){
-            window.newMobileSelect.showPicker(['周二', '11:00']);
-            // window.newMobileSelect.showPicker([7, 9, 2, 20]);
+            window.newMobileSelect.showPicker([3, 11]);
         };
 
     </script>
